# ffoms-nsi-etl

./: .env.example  pyproject.toml  test.ipynb
src/: main.py
src/tfoms_nsi/: __init__.py  config.py  constants.py  main.py  models.py  schemas.py
