[project]
name = "tfoms_nsi"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.41",
    "urllib3>=2.5.0",
]
